--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+tensorflow-gpu==1.13.1
+librosa==0.6.1
+numba==0.39.0
+numpy==1.14.0
 falcon==1.2.0
 inflect==0.2.5
 audioread==2.1.5
-librosa==0.5.1
 matplotlib==2.0.2
-numpy==1.14.0
 scipy==1.0.0
 tqdm==4.11.2
 Unidecode==0.4.20
