--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/cmudict"]
 	path = src/cmudict
 	url = git@github.com:stefantaubert/cmudict-parser.git
+[submodule "src/eng2ipa"]
+	path = src/eng2ipa
+	url = git@github.com:stefantaubert/eng2ipa-accent-transformer.git
